Added an invalid form response to register request

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,7 +6,8 @@
         },
         "register": {
             "success": "Register successful!",
-            "exists": "User exists!"
+            "exists": "User exists!",
+            "invalid_form": "Please fill the required fields!"
         }
     }
 }
